--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 package-lock.json
 
 # ignore compiled lib files
-lib/*
-app/lib/*
+# lib/*
+# app/lib/*
 built-tests
 
 # commit a placeholder to keep the app/lib directory
